// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deparse 1`] = `
"CREATE TABLE orders (
 order_id int PRIMARY KEY,
product_no int REFERENCES products (product_no)  ,
quantity int 
);"
`;

exports[`deparse 2`] = `
"CREATE TABLE orders (
 order_id int PRIMARY KEY,
product_no int REFERENCES products  ,
quantity int 
);"
`;

exports[`deparse 3`] = `
"CREATE TABLE t1 (
 a int PRIMARY KEY,
b int,
c int,
FOREIGN KEY (b, c) REFERENCES other_table (c1, c2)   
);"
`;

exports[`deparse 4`] = `
"CREATE TABLE products (
 product_no int PRIMARY KEY,
name text,
price numeric 
);"
`;

exports[`deparse 5`] = `
"CREATE TABLE orders (
 order_id int PRIMARY KEY,
shipping_address text 
);"
`;

exports[`deparse 6`] = `
"CREATE TABLE order_items (
 product_no int REFERENCES products  ,
order_id int REFERENCES orders  ,
quantity int,
PRIMARY KEY (product_no, order_id) 
);"
`;
